examples/examples_inferred/good/07-static_id.ez
x = 7;

letExample = let { x = 3 } in lambda: t -> 3 + t;

main = letExample 5 == 8;
