examples/examples_inferred/bad/unknown_id_3.ez
f x = let { y = 2 } in x + y + z;

main = f -1;
